# bayesBlocks

./: .gitignore  BayesBlocks.py  PLAN.md  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: Example-checkpoint.ipynb
benchmarks/: RESULTS.md  baseline.csv  bench_calc_fitness.py  generate_data.py
benchmarks/data/: tte_n100.npy  tte_n1000.npy  tte_n2000.npy  tte_n250.npy  tte_n3000.npy  tte_n500.npy
testData/: tteascii.00551
tests/: conftest.py  test_bblock.py  test_bblock_multi.py  test_vectorisation.py
